apps/downloader-lidarr/k8s.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app.kubernetes.io/name: lidarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:8.1.2135
          ports:
            - containerPort: 8686
              name: http
          volumeMounts:
            - name: config-vol
              mountPath: /config
            - name: music-vol
              mountPath: /vol_raidz1/music
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "prox01"
          effect: "NoSchedule"
      restartPolicy: Always
      volumes:
        - name: config-vol
          hostPath:
            path: /vol_raidz1/container-scheduler/downloader-lidarr
            type: DirectoryOrCreate
        - name: music-vol
          hostPath:
            path: /vol_raidz1/music
            type: Directory
