apps/downloader-lidarr/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: lidarr
    namespace: media
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd, authelia-forwardauth-authelia@kubernetescrd
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:GNsvQea7RbSBkB6StIJwFfVR22iHRfc=,iv:H/L6r9bkewQkBrELIVMr8EzgoVHnXYVF/OntqMvE25c=,tag:rUF4Rhyd9nVAHx5oIvnWdw==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:cHhKGUHeJeG5a5npiYdWu5JC30Ufjf4=,iv:ybL/2ZWHcxbO9h9cuStpvb2xZ8VE7sYthvfKK/M4xcM=,tag:3tjgA5CJviYVCyccLg87Mw==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: lidarr
                        port:
                            number: 8686
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZVms5TkliajVDNllMWjds
[...]
            aV9ZAXHO4yxMl0zaFBvJKhuL1jGGCNz2FYEQ1Q0pptMjjba/jz1lug==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFRkJldXdBM2xVVHRKSkVi
[...]
            ucUmHJau+iXF+3cJVGc/DveqbuoELhRABdnHVCL503yy6x6luFdL6A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-09-08T19:50:31Z"
    mac: ENC[AES256_GCM,data:dt+6D/wTRJsr7ZQGqUaIeeuWztbPoNPjvEnQpdZKjzwZRLeDGoh7/seAiYBY3iMb3cEb9LGl2hKfDvE9j6h7haVQCCb+iCDgJvIiDmtcCYSChBRZABKk/jqTYb9RFC8ehAzetOK+CjZ4fupOGgKpDGTHhaVPl8hbB4fl5XPMLlU=,iv:Dz7WAJcoiBJmPYkAEJSth3UhpwCGT7I6QpSvbaHAosA=,tag:bFirDGp+AD9gQ1GElANjdg==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.10.2
